--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -21,20 +21,16 @@
         android:id="@+id/linearlayout"
         android:layout_width="275dp"
         android:layout_height="390dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="10dp"
-        android:background="@drawable/back"
+        android:background="@drawable/background_shape"
         android:orientation="vertical"
         android:padding="10dp"
-        android:gravity="center"
+        android:layout_centerHorizontal="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.498">
+
 
         <ImageView
             android:id="@+id/imageView3"
@@ -57,10 +53,10 @@
         <Button
             android:id="@+id/SignwithEmail"
             android:layout_width="200dp"
-            android:layout_height="236dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:background="@color/blueish"
-            android:drawableLeft="@color/Black"
+            android:background="@drawable/btnred"
+            android:drawableLeft="@drawable/whitemail"
             android:paddingLeft="10dp"
             android:text="SigIn with Email"
             android:textColor="#FFFFFF" />
@@ -71,8 +67,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="30dp"
-            android:background="@drawable/back"
-            android:drawableLeft="@drawable/back"
+            android:background="@drawable/btnblueish"
+            android:drawableLeft="@drawable/phonewhite"
             android:gravity="center"
             android:paddingLeft="10dp"
             android:text="SignIn with Phone"
@@ -120,9 +116,9 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="25dp"
-            android:background="@color/colorAccent"
+            android:background="@drawable/button_shape"
             android:text="Signup"
             android:textColor="#FFFFFF" />
     </LinearLayout>
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
