--- a/app/src/main/res/layout/activity_choose_one.xml
+++ b/app/src/main/res/layout/activity_choose_one.xml
@@ -3,14 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/back3"
+    android:background="@drawable/menu_img"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     tools:context=".ChooseOne">
 
     <LinearLayout
         android:id="@+id/linearlayout"
-        android:layout_width="260dp"
-        android:layout_height="383dp"
+        android:layout_width="290dp"
+        android:layout_height="420dp"
         android:background="@drawable/background_shape"
         android:orientation="vertical"
         android:padding="15dp"
@@ -29,7 +30,7 @@
             android:fontFamily="serif-monospace"
             android:text="Find homemade food around you or offer your own !"
             android:textAlignment="center"
-            android:textColor="#8761CC"
+            android:textColor="#FF4107AA"
             android:textSize="18sp" />
 
         <Button
@@ -37,8 +38,8 @@
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="30dp"
-            android:background="#FF5622"
+            android:layout_marginTop="20dp"
+            android:background="#FF2222"
             android:text="Connect As Chef"
             android:textColor="#FFFFFF"
             android:textSize="18sp" />
@@ -48,7 +49,7 @@
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="20dp"
             android:background="#FF5722"
             android:text="Connect As Customer"
             android:textColor="#FFFFFF"
@@ -56,10 +57,10 @@
 
         <Button
             android:id="@+id/delivery"
-            android:layout_width="200dp"
-            android:layout_height="50dp"
+            android:layout_width="197dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="20dp"
             android:layout_marginBottom="30dp"
             android:background="#F403CC"
             android:text="Connect As Delivery Person"
