--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,21 +4,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/back2"
+    android:background="@drawable/back"
     tools:context=".MainActivity">
-
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/getstart"
+        android:id="@+id/startbtn"
+        android:layout_centerHorizontal="true"
+        android:layout_margin="300dp"
         android:background="#30ffffff"
         android:text="Get Started"
-        android:textSize="35dp"
         android:textStyle="bold"
-        android:layout_margin="300dp"
-        android:layout_centerHorizontal="true"
-        android:gravity="center"
+        android:textSize="30dp"
+
+
         />
 
 </RelativeLayout>
